--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -118,3 +118,19 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 8px;
+}
+.custom-scrollbar::-webkit-scrollbar-track {
+  background: #27272a; 
+  border-radius: 10px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background: #3f3f46; 
+  border-radius: 10px;
+}
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: #52525b; 
+}
